[project]
name = "App"
version = "0.1.0"
description = "App"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.5",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "certifi>=2026.2.25",
    "cryptography>=46.0.7",
    "fastapi>=0.135.3",
    "fastapi-utils>=0.8.0",
    "greenlet>=3.4.0",
    "gunicorn>=26.0.0",
    "openai>=2.31.0",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "starlette-admin>=0.16.0",
    "typing-inspect>=0.9.0",
    "uvicorn>=0.44.0",
    "validators>=0.35.0",
]
